--- a/index.html
+++ b/index.html
@@ -197,15 +197,25 @@ th {
 #datepicker {
 	border-top-left-radius: 25px;
 	border-bottom-left-radius: 25px;
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
+	padding-left: 4px;
+	margin-top: 7px;
+	height: 4%;
 }
-
 
 #btn {
 	margin-left: -10px;
 }
-#selects {
-	
 
+#selects {
+	margin-left: 0.5%;
+}
+
+#selects img {
+	margin-left: 8px;
+	margin-bottom: -7px;
+	width: 22.5px;
 }
 
 </style>
